<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CalculoFacilActivity!</string>
    <string name="app_name">Calculo Facil</string>
    <string name="app_title">Cálculo Fácil</string>
    <string-array name="menuPrincipal">
        <item>Cálculos Trabalhistas</item>
        <!-- 
        <item>Dívidas vencidas</item>
        -->
    </string-array>
    <string-array name="menuTrabalhistas">
        <item>Rescisão de Contrato - CLT</item>
        <!-- 
        <item>Férias</item>
        <item>Salário</item>
        <item>Décimo Terceiro</item>
         -->
    </string-array>
    <string-array name="menuDividas">
        <item>Rescisão de Contrato</item>
        <item>Salário</item>
        <item>Décimo Terceiro</item>
        <item>Férias</item>
    </string-array>
    <string-array name="motivosRescisao">
        <item>Pedido de demissão</item>
        <item>Dispensa sem justa causa</item>
        <item>Dispensa com justa causa</item>
        <item>Término de contrato de experiência</item>
        <item>Rescisão antecipada do contrato de experiência por iniciativa do empregador</item>
        <item>Rescisão antecipada do contrato de experiência por iniciativa do empregado</item>
        <item>Falecimento do empregado</item>
    </string-array>
    <string-array name="tiposAvisoPrevio">
        <item>Trabalhado</item>
        <item>Indenizado</item>
    </string-array>
    <string name="dt_admissao">Data de Admissão</string>
    <string name="dt_demissao">Data de Demissão</string>
    <string name="motivo_rescisao">Motivo da Rescisão</string>
    <string name="bt_calcular">Calcular</string>
    <string name="bt_voltar">Voltar</string>
    <string name="ultimo_salario">Último Salário</string>
    <string name="tp_aviso_previo">Aviso Prévio</string>
    <string name="rescisao_clt_titulo">Rescisão de contrato de trabalho - CLT</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="saldo_salario">Saldo de Salário</string>
    <string name="decimo_terceiro">13º Salário (Proporcional)</string>
    <string name="ferias_proporcionais">Férias Proporcionais</string>
    <string name="um_terco_ferias_proporcionais">1/3 Férias Proporcionais</string>
    <string name="total_proventos">Total de Proventos</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_sair">Sair</string>
    <string name="dialog_ajuda">O aplicativo Cálculo Fácil lhe permite realizar cálculos bastante úteis em seu dia a dia. Eventualmente serão lançadas novas versões do aplicativo com novos cálculos.</string>
    <string name="inss_salario">INSS sobre Salário</string>
    <string name="inss_ferias">INSS sobre Férias</string>
    <string name="total_descontos">Total de Descontos</string>
    <string name="inss_decimo">INSS sobre 13º</string>
    <string name="total_a_pagar">Valor da Rescisão</string>
    <string name="calculo_boleto_titulo">Atualização de Boletos</string>
    <string name="dt_vencimento">Data de Vencimento:</string>
    <string name="dt_pagamento">Data de Pagamento:</string>
    <string name="valor_boleto">Valor do Boleto (R$)</string>
    <string name="valor_multa">Valor da Multa:</string>
    <string-array name="tiposMulta">
        <item>Percentual (%)</item>
        <item>Valor Fixo (R$)</item>
    </string-array>
    <string name="aplicacao_multa">Aplicação de Multa</string>
    <string name="aplicacao_juros">Aplicação de Juros</string>
    <string-array name="tiposJuros">
        <item>Compostos</item>
        <item>Simples</item>
    </string-array>
    <string name="valor_juros">Valor dos Juros (%)</string>
    <string-array name="tiposIncidenciaJuros">
        <item>ao dia</item>
        <item>ao mês</item>
    </string-array>
</resources>
