<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4" android:padding="5px">
        <TextView android:gravity="center_vertical|center_horizontal|center" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/textView6" android:text="@string/rescisao_clt_titulo" android:textSize="18dip" android:textStyle="bold"></TextView>
    </LinearLayout>
    <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:layout_width="match_parent">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/dt_admissao"></TextView>
            <EditText android:layout_width="wrap_content" android:id="@+id/edtDtAdmissao" android:layout_height="wrap_content" android:text="EditText"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/dt_demissao"></TextView>
            <EditText android:layout_width="wrap_content" android:id="@+id/edtDtDemissao" android:layout_height="wrap_content" android:text="EditText"></EditText>
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/motivo_rescisao"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout2">
        <Spinner android:layout_height="wrap_content" android:id="@+id/spMotivoRescisao" android:entries="@array/motivosRescisao" android:layout_width="fill_parent"></Spinner>
    </LinearLayout>
    <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout2" android:layout_width="match_parent">
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="@string/ultimo_salario"></TextView>
            <EditText android:layout_width="wrap_content" android:id="@+id/edtUltimoSalario" android:layout_height="wrap_content" android:text="EditText"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:layout_width="fill_parent">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView5" android:layout_height="wrap_content" android:text="@string/tp_aviso_previo"></TextView>
            <Spinner android:id="@+id/spinner2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:entries="@array/tiposAvisoPrevio"></Spinner>
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
        <Button android:layout_height="wrap_content" android:text="@string/bt_calcular" android:id="@+id/button1" android:layout_width="wrap_content" android:paddingLeft="20px" android:paddingRight="20px"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bt_voltar" android:id="@+id/button2" android:paddingLeft="20px" android:paddingRight="20px"></Button>
    </LinearLayout>
	
	
</LinearLayout>
